--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -1064,7 +1064,7 @@ public class DoubleLinkedListDemo {
 
 
 
-## 23、
+## 
 
 
 
@@ -1074,7 +1074,7 @@ public class DoubleLinkedListDemo {
 
 # 🎈🎈课堂笔记🎈🎈
 
-# ✨高级\_集合框架_07_21
+# v2.1.0高级\_集合框架_07_21
 
 ## 1.1 map和set
 
@@ -1422,7 +1422,7 @@ public class QuickSort {
 
 
 
-# ✨高级\_异常_07_22
+# v2.2.0高级\_异常_07_22
 
 ## 1、集合的foreach问题
 
@@ -1723,7 +1723,7 @@ com.think.lv2.exception.NetworkRuntimeException: 网络链接错误
 
 
 
-# ✨高级\_IO_07_22
+# v2.3.0高级\_IO_07_22
 
 ## 1 测试File
 
@@ -1958,6 +1958,91 @@ append – boolean if true, then data will be written to the end of the file rat
 
 
 
+## 10 序列化
+
+### 10.1 定义
+
+定义： 序列化，就是把一个引用类型，拆分成最小的单位(byte)，以便今后数据字节流的形式存储在磁盘中或者是通过网络协议发送另一方，它是数据存储和发送的一种重要技术
+
+
+
+### 10.2 操作步骤
+
+1、创建对象，引用类型
+
+注意：
+
+- 需要被序列化的类一定要实现java.io.Serializable接口：因为ObjectOutputStream在序列化的时候，会有一个类型检测
+
+- serialVersionUID相当于一个防伪编码，作用是为了在序列化与反序列化的过程中，预防有人篡改字节码中的信息
+
+~~~java
+class Person implements Serializable {
+
+    private static final long serialVersionUID = 2263583963027808782L; // 声明这个类的实例是可以被序列化的
+
+    // JVM在反序列化的时候，会去识别这个“防伪编码”，作用有点类似于MD5校验
+//    private static final long serialVersionUID = 1L;
+
+    String name;
+
+    @Override
+    public String toString() {
+        return "Person{" +
+                "name='" + name + '\'' +
+                '}';
+    }
+
+    public Person(String name) {
+        this.name = name;
+    }
+}
+~~~
+
+
+
+2、写入文件
+
+~~~java
+ public static void main(String[] args) {
+
+        Person p1 = new Person("Jack");
+        System.out.println(p1.hashCode());
+        serializable(p1);
+
+        unSerializable();
+    }
+
+    // 建一个对象的数据拆分成字节，有序的写入到文件中去
+    private static void serializable(Person p1) {
+        Path path = Paths.get("c:/Users/ThinkAboutAI/Desktop/person.data");
+        try ( // 只要实现了Closeable接口的实例都会自动关闭
+              OutputStream out = Files.newOutputStream(path);
+              ObjectOutputStream oos = new ObjectOutputStream(out)
+        ) {
+            oos.writeObject(p1);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    private static void unSerializable() {
+        try (
+                ObjectInputStream ois = new ObjectInputStream(Files.newInputStream(Paths.get("c:/Users/ThinkAboutAI/Desktop/person.data")))
+        ) {
+            Object obj = ois.readObject();
+            if (obj instanceof Person) {
+                Person person = (Person) obj;
+                System.out.println(person.hashCode());
+                System.out.println(person);
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        } catch (ClassNotFoundException e) {
+            throw new RuntimeException(e);
+        }
+    }
+~~~
 
 
 
@@ -1967,6 +2052,404 @@ append – boolean if true, then data will be written to the end of the file rat
 
 
 
+# v2.3.0网络编程_07_25
+
+## 1、IP、Port、双工等定义
+
+- Internet P(IP)：每一台硬件（能接入网络的）在网络上的一个唯一地址标识，其它设备能直接通过IP来对该设备发起连接请求
+
+- Port：端口，这个是为了区分不同的应用程序如何来接受网络数据包
+- 全双工：客户端在给服务器端发送信息的同时，服务器端也可以给客户端发送信息；
+- 半双工：客户端可以给服务端发送信息，服务端也可以给客户端发送信息，但是客户端和服务端不能同时发；
+
+- Transform verb. 传输
+
+- Control 控制
+
+- Protocol 协议
+
+
+
+## 2、网络模型
+
+### 2.1 OSI
+
+- 模型：
+
+![image-20220725173441710](images/image-20220725173441710.png)
+
+- 功能：
+
+![image-20220725173506928](images/image-20220725173506928.png)
+
+
+
+### 2.2 TCP/IP
+
+- 模型
+
+![image-20220725173557155](images/image-20220725173557155.png)
+
+- 功能
+
+![image-20220725173607920](images/image-20220725173607920.png)
+
+
+
+## 3、TCP
+
+- 传输层协议
+
+![image-20220725172555937](images/image-20220725172555937.png)
+
+
+
+### 2.1 Server
+
+~~~java
+public class Server {
+
+    public static void main(String[] args) {
+        
+
+        try ( // 如果开发人员要手工关闭资源，一定要按照FILO规则来关闭和释放资源
+            // 创建一个服务器端的socket对象
+              ServerSocket ss = new ServerSocket(8080);
+              // 启动监听服务：等待客户端发出请求
+              // 如果没有接收到任何请求，程序将会一直阻塞在这里
+              Socket socket = ss.accept(); // 打通了一个数据流的双向管道
+              // 接收数据
+              InputStream in = socket.getInputStream();
+//              OutputStream out = socket.getOutputStream()
+        ) {
+            // 创建一个缓冲对象
+            byte[] buffer = new byte[1024];
+            int len;
+
+            while ((len = in.read(buffer)) != -1) { // 读取到数据流的末尾
+
+                String msg = new String(buffer, 0, len);
+                if ("q".equalsIgnoreCase(msg)) break; // 当客户端发送了Q或q，就关闭和退出程序
+
+                System.out.println("Server:" + msg);
+
+//                out.write();
+            }
+
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+}
+~~~
+
+
+
+### 2.2 Client
+
+~~~java
+public class Client {
+    public static void main(String[] args) {
+        try (
+                // 在连接服务器的时候，必须要知道对方的IP和PORT信息
+                // 在new的时候，不光已经创建了实例，而且已经发送了connect这个动作
+                Socket socket = new Socket(InetAddress.getByName("127.0.0.1"), 8080);
+                OutputStream out = socket.getOutputStream()
+        ) {
+            Console console = new Console();
+            String msg;
+            while (!"q".equalsIgnoreCase(msg = console.readString("请输入要发送的消息："))) {
+                out.write(msg.getBytes());
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+}
+~~~
+
+
+
+### 2.3 HttpServer
+
+~~~java
+public static void main(String[] args) {
+        // 创建一个服务器端的socket对象
+
+        try ( // 如果开发人员要手工关闭资源，一定要按照FILO规则来关闭和释放资源
+              ServerSocket ss = new ServerSocket(8080);
+              // 启动监听服务：等待客户端发出请求
+              // 如果没有接收到任何请求，程序将会一直阻塞在这里
+              Socket socket = ss.accept(); // 打通了一个数据流的双向管道
+              // 接收数据
+//              InputStream in = socket.getInputStream();
+              OutputStream out = socket.getOutputStream();
+        ) {
+            System.out.println("接收到请求");
+            String msg = "<html><body><h1>Hello Http!</h1></body></html>";
+            out.write("HTTP/1.1 200 OK\r\n".getBytes()); // 告诉客户端的请求接收成功
+            out.write("Content-Type: text/html;charset=utf-8\r\n".getBytes()); // 我向你发送的数据的MIME
+            out.write("Connection: keep-alive\r\n".getBytes());
+//            writer.write("Content-Length: " + msg.length() + "\r\n"); // 我向你发送的数据的MIME
+            out.write("\r\n".getBytes()); // 在响应头和具体的内容之间，必须要有一个空行
+            out.write(msg.getBytes());
+            out.flush();
+//            out.write("\r\n".getBytes());
+            Thread.sleep(10000); // 模拟服务器等待一段时间（客户端需要把发送的数据下载完）
+        } catch (IOException e) {
+            e.printStackTrace();
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+    }
+}
+~~~
+
+
+
+
+
+## 4、UDP
+
+### 4.1 Receiver
+
+~~~java
+public class Receiver {
+    public static void main(String[] args) {
+        // 创建数据报文的socket
+        try (
+                DatagramSocket ds = new DatagramSocket(8080);
+        ) {
+            byte[] buffer = new byte[1024]; // 1kb
+            // 真正用来盛放数据的数据包裹
+            DatagramPacket dp = new DatagramPacket(buffer, buffer.length);
+            // 当buffer被接收的数据填充满的时候，就会return
+            ds.receive(dp); // 当没有接收到消息的时候，会一直阻塞
+
+            // 服务器端是可以获取到客户端的地址信息
+//            dp.getAddress(); // 获取对方IP
+//            dp.getPort(); // 获取端口
+
+            int len = dp.getLength(); // 真正的接收到数据的长度
+            byte[] data = dp.getData(); // 它的长度与buffer的长度是一样
+            String msg = new String(data, 0, len);
+            System.out.println(msg);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+}
+~~~
+
+
+
+### 4.2 Sender
+
+~~~java
+public class Sender {
+    public static void main(String[] args) {
+        try (
+                DatagramSocket socket = new DatagramSocket()
+        ) {
+            byte[] msg = "hello world".getBytes();
+            // 在发送的数据报文中，封装目标的地址信息
+            DatagramPacket dp = new DatagramPacket(msg, msg.length, InetAddress.getByName("127.0.0.1"), 8080);
+            // while
+            socket.send(dp);
+
+            // 发送的数据传输完毕的时候，发送一个类似于Q的表示
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+}
+~~~
+
+
+
+
+
+# v2.3.0多线程_07_25
+
+## 1、线程、进程概念
+
+- **Process 进程**：就是一个应用程序在运行期间，它所申请的资源（硬件、软件）的总和，它即是内存中划定的一块区域，而且是当前应用程序所“独占”的,是系统进行资源分配和调度的基本单位
+
+  - 当一个应用程序功能足够复杂的时候，它可能会由多个进程组成，每一个进程都会承担或者提供相应的某一项功能
+
+  
+
+- **Thread 线程**：“是一个轻量级的进程”，一个进程是由多个线程组成的，同时，线程又是CPU的最基本的调度单位
+
+
+
+- CPU相关概念：
+  - 某一个线程如果想要计算，必须首先要争抢到CPU的时间片（是一个非常小的，几乎不可以再切割的时间单位），才有机会让CPU来计算程序中指定的逻辑
+  -  我们的操作系统可以同时运行多个应用程序，这些程序是由多个进程组成的，同时每一个进程又包含了多个线程，因此，有一个权力非常大的对象“调度器”，
+  - 由调度器来决定什么时间，哪个线程来执行CPU的运算
+
+
+
+## 2、创建线程
+
+创建线程有多种方式：
+
+### 2.1 编写Thread的子类
+
+重写run方法，通过start启动线程(因为Java是单根继承结构，所以一个类是线程类，就不能是其它类型的子类型了，有局限性)
+
+~~~java
+  // 编写一个线程类的子类
+  class MyThread extends Thread {
+  
+  
+      @Override
+      public void run() { // 状态3：运行状态
+          RandomUtils.longSleep(3000, 5000);
+          // 获取到当前的线程对象
+          Thread thread = Thread.currentThread();
+          String name = thread.getName();
+          long id = thread.getId();
+          int priority = thread.getPriority(); // 线程的优先级
+          System.out.println(name + ":" + id + ":" + priority);
+          System.out.println(thread.getId() + "执行完毕");
+  
+      }  // 状态4：终止状态
+  }
+~~~
+
+  
+
+### 2.2 编写一个类实现Runnable接口
+
+实现run方法，通过start启动线程（因为Task类只需要实现接口，所以它可以是其它类的子类型，更灵活）
+
+~~~java
+class Task implements Runnable {
+
+    @Override
+    public void run() {
+        RandomUtils.longSleep(3000, 5000);
+        // 获取到当前的线程对象
+        Thread thread = Thread.currentThread();
+        String name = thread.getName();
+        long id = thread.getId();
+        int priority = thread.getPriority(); // 线程的优先级
+        System.out.println(name + ":" + id + ":" + priority);
+        System.out.println(thread.getId() + "执行完毕");
+    }
+}
+
+~~~
+
+
+
+### 2.3 内部类
+
+更加灵活，可以不用再刻意的新建一个类，它的唯一的确定，就是别人无法重用（它没有名称）
+
+~~~java
+    private static void multiThreadDemo() {
+
+        // 打印当前主线程的信息
+        Thread main = Thread.currentThread (); // 可以理解为主线程
+        System.out.println(main.getId() + ":" + main.getName());
+
+        // 实例化一个线程对象
+        for (int i = 0; i < 3; i++) { // 创建3个子线程
+            // Thread t = new MyThread(); // 状态1：进入new初始化状态 马上会进入状态2：就绪状态（阻塞状态）
+            // 启动这个线程
+            // t.start();
+
+            // Thread t = new Thread(new Task());
+            // t.start();
+
+            Thread t = new Thread(() -> { // 匿名内部类 - 简化为lambda表达式
+                RandomUtils.longSleep(3000, 5000);
+                // 获取到当前的线程对象
+                Thread thread = Thread.currentThread();
+                String name = thread.getName();
+                long id = thread.getId();
+                int priority = thread.getPriority(); // 线程的优先级
+                System.out.println(name + ":" + id + ":" + priority);
+                System.out.println(thread.getId() + "执行完毕");
+            });
+            t.start();
+        }
+
+        System.out.println("-----------------------------");
+    }
+~~~
+
+
+
+## 3 线程分配资源
+
+- 定义一个类，代表容器，也表示线程抢占的资源
+
+~~~java
+public class Container {
+
+    private final List<String> list = new ArrayList<>();
+
+    public void increment(String item) {
+        list.add(item);
+    }
+
+    public void showAll() {
+        System.out.println(list);
+    }
+
+}
+~~~
+
+- 创建线程，通过实现接口
+
+~~~java
+public class Dude implements Runnable {// 家伙 brother guy
+
+    private final String name;
+    private final Container container;
+
+    public Dude(String name, Container container){
+        this.name = name;
+        this.container = container;
+    }
+
+
+    @Override
+    public void run() {
+        for (int i = 0; i < 100; i++) {
+            container.increment(name);
+        }
+    }
+
+}
+~~~
+
+- 程序入口
+
+~~~java
+public class Main {
+    public static void main(String[] args) {
+        // 容器只有一个
+        Container container = new Container();
+        // 但是它要同时被两个任务类使用
+        Thread t1 = new Thread(new Dude("Jack", container));
+        Thread t2 = new Thread(new Dude("Mike", container));
+
+        t1.start();
+        t2.start();
+
+        while (t1.isAlive() || t2.isAlive()) {
+        }
+
+        // 程序执行到这里，证明t1和t2都不是活跃的
+        container.showAll();
+    }
+}
+~~~
 
 
 
@@ -1975,7 +2458,12 @@ append – boolean if true, then data will be written to the end of the file rat
 
 
 
-# 🧨🧨🧨🧨分割线🧨🧨🧨🧨
+
+# 🧨🧨🧨🧨
+
+# 分割线
+
+# 🧨🧨🧨🧨
 
 # 🎈🎈问题收纳
 
