--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -2148,6 +2148,8 @@ public class Server {
 
 ### 2.2 Client
 
+注意Client的out没close服务器端就不会停止，可以利用这一点，多次发送信息
+
 ~~~java
 public class Client {
     public static void main(String[] args) {
@@ -2270,7 +2272,7 @@ public class Sender {
 
 
 
-# v2.3.0多线程_07_25
+# v2.4.0多线程_07_25
 
 ## 1、线程、进程概念
 
