--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -1064,7 +1064,6 @@ public class DoubleLinkedListDemo {
 
 
 
-## 
 
 
 
@@ -1072,9 +1071,8 @@ public class DoubleLinkedListDemo {
 
 
 
-# 🎈🎈课堂笔记🎈🎈
 
-# v2.1.0高级\_集合框架_07_21
+# 高级\_集合框架
 
 ## 1.1 map和set
 
@@ -1422,7 +1420,7 @@ public class QuickSort {
 
 
 
-# v2.2.0高级\_异常_07_22
+# 高级\_异常
 
 ## 1、集合的foreach问题
 
@@ -1723,7 +1721,7 @@ com.think.lv2.exception.NetworkRuntimeException: 网络链接错误
 
 
 
-# v2.3.0高级\_IO_07_22
+# 高级\_IO
 
 ## 1 测试File
 
@@ -1958,7 +1956,7 @@ append – boolean if true, then data will be written to the end of the file rat
 
 
 
-## 10 序列化
+## 10 序列化Serializable
 
 ### 10.1 定义
 
@@ -2052,7 +2050,7 @@ class Person implements Serializable {
 
 
 
-# v2.3.0网络编程_07_25
+# 网络编程
 
 ## 1、IP、Port、双工等定义
 
@@ -2272,7 +2270,7 @@ public class Sender {
 
 
 
-# v2.4.0多线程_07_25
+# 多线程
 
 ## 1、线程、进程概念
 
@@ -2386,7 +2384,7 @@ class Task implements Runnable {
 
 
 
-## 3 线程分配资源
+## 3、线程竞争资源
 
 - 定义一个类，代表容器，也表示线程抢占的资源
 
@@ -2432,6 +2430,8 @@ public class Dude implements Runnable {// 家伙 brother guy
 
 - 程序入口
 
+  因为t1.start()为非阻塞性方法，所以不会等t1执行完后再执行t2.start()
+
 ~~~java
 public class Main {
     public static void main(String[] args) {
@@ -2452,6 +2452,565 @@ public class Main {
     }
 }
 ~~~
+
+
+
+## 4、API
+
+### 4.1 while{}
+
+~~~java
+        Thread t = new Thread(new Task());
+        t.start(); // 非阻塞性方法
+        System.out.println("主线程执行完毕");
+       while (t.isAlive()) {
+             ;
+         }
+        System.out.println("子线程执行完毕");
+~~~
+
+
+
+### 4.2 join()-等待当前线程死亡
+
+等待当前这个t线程死亡：如果t没有执行完毕，程序的执行流就会一直阻塞在这一行
+
+~~~java
+        Thread t = new Thread(new Task());
+        t.start(); // 非阻塞性方法
+        System.out.println("主线程执行完毕");
+
+        t.join(); //等待当前这个t线程死亡：如果t没有执行完毕，程序的执行流就会一直阻塞在这一行
+
+        System.out.println("子线程执行完毕");
+~~~
+
+
+
+### 4.3 interrupt()-中断
+
+- `interrupt()`并不会强制中断线程，它只是发出一个中断请求，由被中断线程来决定是否应该中断。
+- 被中断线程需要持续检查是否收到中断请求，编写相应逻辑进行中断。
+
+~~~java
+public class InterruptMain {
+
+    public static void main(String[] args) {
+        Thread t = new Thread(new Task());
+        t.start();
+
+        System.out.println("主线程等待ing...");
+        RandomUtils.longSleep(2_000, 3_000);
+
+        // 发出中断的指令
+        System.out.println("发出中断指令");
+        t.interrupt(); // 不是强制性的，只是向子线程发出了一个中断信号
+    }
+
+
+private static class Task implements Runnable {
+        @Override
+        public void run() {
+           for(int i=0;i<10_000;i++){
+                if (isInterrupted()) return;
+                System.out.println("子线程执行ing...");
+            }
+        }
+
+        private boolean isInterrupted() {
+            return Thread.currentThread().isInterrupted(); // 当前线程是否被打了中断的标记
+        }
+    }
+
+~~~
+
+ 
+
+### 4.4 synchronized
+
+- 在修改被争抢的资源方法上新增一个synchronized(同步)
+- 效果：会让该方法变成原子性的一个操作(不能再切割的)，也就是说，当一个线程在里面执行，还没有执行完毕的时候，其它要调用这个方法的线程会一直被阻塞在外面
+-  工作原理：
+  - 1、当一个类的方法，只要有一个被加了sync修饰，那么JVM就会创建出一个类似于lock的对象，我们称之为monitor(监视器)
+  - 2、当有任何一个线程想要访问带有sync的方法时，JVM的调度器就会询问自己一个问题：monitor是否可以获取到
+         -- Y 当前线程就会拿到该monitor，然后进去执行该方法
+         -- N 当前线程就会被阻塞在方法外
+  -  3、当某一个线程执行完逻辑以后，它会把monitor归还给调度器
+
+- 程序
+
+~~~java
+ public static void main(String[] args) throws InterruptedException {
+        // 1、创建一个计数器对象
+        Counter counter = new Counter(); // 被争抢的资源对象
+        // 2、创建2个以上的线程任务，对计数器进行累加
+        List<Thread> tasks = new ArrayList<>();
+        for (int i = 0; i < 2; i++) {
+            Thread t = new Thread(new User(counter));
+            tasks.add(t);
+            t.start();
+        }
+
+        // 等待他们执行完毕
+        for (Thread t : tasks)
+            t.join();
+
+        // 3、最终统计total
+        System.out.println(counter.getTotal());
+
+    }
+
+private static class User implements Runnable {
+
+        private Counter counter;
+
+        public User(Counter counter) {
+            this.counter = counter;
+        }
+
+        private void pushButton() {
+            counter.increment();
+        }
+
+        @Override
+        public void run() {
+            for (int i = 0; i < 100_000; i++)
+                pushButton();
+        }
+    }
+~~~
+
+- synchronized部分
+
+~~~java
+
+private static class Counter {
+        // O
+        private int total; // 主存区 CPU寄存器
+        // private int total; // 主存区 CPU寄存器
+
+    //用法一，synchronized关键字修饰方法
+        public synchronized void increment() { // 会有多个线程轮番争抢到时间片进来执行累加逻辑
+            // 1、把寄存器上的total现在的值拷贝一份进来，声明一个变量存起来
+            // int temp = total;
+            // 2、temp = temp + 1
+            // 3、把累加后的temp写回寄存器上的total变量
+            // int num = 0; // 存储在工作内存区
+            total++;
+        }
+    //用法二，synchronized代码块
+     public void increment() {
+        synchronized ( this) {	//需要提供一个不可修改的引用类型的变量，一般不会使用基本类型
+            totalBytes++;
+        }
+    }
+
+    
+        public int getTotal() {
+            return total;
+        }
+    }
+
+~~~
+
+
+
+### 4.5 ReentrantLock()
+
+~~~java
+ Lock lock = new ReentrantLock(); // 可重入锁
+
+public void increment() throws InterruptedException {
+            //前面的逻辑代码
+    		//...............
+            lock.lock(); // 加锁：一旦无法获取到lock，则会阻塞在此
+            // boolean flag = lock.tryLock(3, TimeUnit.SECONDS); // 随缘锁：；立即返回的，true - 抢到了；false - false
+            // if (flag) {
+            try {
+                total++;
+            } finally {
+                lock.unlock(); // 释放锁
+            }
+            // } else {
+            //     // 编写没有抢到补偿逻辑
+            // }
+            //后面的逻辑代码
+    		//..............
+    
+ }
+~~~
+
+
+
+### 4.6 wait()、notify()、notifyAll()
+
+- 大致用法
+
+~~~java
+// 要使用线程之间通讯的方法：线程1告诉另外一个线程2，我的工作做完了
+         Object lock = new Object();
+         System.out.println(0);
+         synchronized (lock) {
+        //     // 做完第一阶段的工作
+             lock.wait();  // 当前的线程暂时交出了CPU的时间片使用权力，此时，正常情况应该有另一个线程来得到锁 等到另一个线程使用完以后，再通知“你又可以用了” lock.notifyAll()
+        //     // 做第三阶段的工作
+         }
+         System.out.println(1);
+
+         obj.notify(); // 通知1个XXX
+        // obj.notifyAll(); // 通知所有的XXX
+~~~
+
+- 实例
+
+~~~java
+public class Main {
+    // 你拍一，我拍一
+    public static void main(String[] args) throws InterruptedException {
+
+        // 创建一个用来争抢的资源
+        List<String> list = new ArrayList<>();
+        // 开辟两个线程，往list中填充数据
+        // 填充的规则如下：线程1首先填充A,A,A，然后线程2填充B,B,B，然后线程1再填充A,A,A
+        // 问题分析：
+        // 对于线程1来说，它需要先填充一些字符串，然后等待一段时间，再继续完成后续的填充工作
+        // 对于线程2来说，它需要等到线程1完成第一阶段的工作，再填充自己的信息，然后再交出执行权
+
+
+        Thread t1 = new Thread(new WorkerA(list));
+        Thread t2 = new Thread(new WorkerB(list));
+
+        t1.start();
+        RandomUtils.longSleep(100, 200);
+		t2.start();
+        
+        t1.join();
+        t2.join(); // 等2个线程都结束以后再来查看list中的顺序是否正确
+
+        System.out.println(list);
+
+    }
+
+    private static class WorkerA implements Runnable {
+        final List<String> list;
+
+        public WorkerA(List<String> list) {
+            this.list = list;
+        }
+
+        public void fill() {
+            for (int i = 0; i < 3; i++)
+                list.add("A");
+        }
+
+        @Override
+        public void run() {
+            // 一定要记住，在wait之前首先必须先获取到monitor
+            try {
+                synchronized (list) {
+                    fill();
+                    System.out.println("fill A 1");
+                    list.wait();
+                    fill();
+                    System.out.println("fill A 2");
+                }
+            } catch (InterruptedException e) {
+                throw new RuntimeException(e);
+            }
+        }
+    }
+
+    private static class WorkerB implements Runnable {
+        final List<String> list;
+
+        public void fill() {
+            for (int i = 0; i < 3; i++)
+                list.add("B");
+        }
+
+        public WorkerB(List<String> list) {
+            this.list = list;
+        }
+
+        @Override
+        public void run() {
+            synchronized (list) {
+                fill();
+                System.out.println("fill B");
+                list.notifyAll(); // 唤醒别人我做完了，你们可以接着去抢了(monitor)
+            }
+        }
+    }
+}
+
+~~~
+
+
+
+### 4.7 Volatile
+
+- 问题案例
+
+```java
+public class DownloadStatus {
+    private int totalBytes;
+    private boolean isDone;
+
+    public synchronized void incrementTotalBytes() {
+            totalBytes++;
+    }
+
+    public int getTotalBytes() {
+        return totalBytes;
+    }
+
+    public boolean isDone() {
+        return isDone;
+    }
+
+    public void setDone(boolean done) {
+        isDone = done;
+    }
+}
+
+public class DownloadFileTask implements Runnable {
+    private DownloadStatus status;
+
+    public DownloadFileTask(DownloadStatus status) {
+        this.status = status;
+    }
+
+    @Override
+    public void run() {
+        System.out.println("Download:" + Thread.currentThread().getName());
+        for (int i = 0; i < 1_000_000; i++) {
+            if (Thread.currentThread().isInterrupted()) return;
+            status.incrementTotalBytes();
+        }
+        status.setDone(true);
+        System.out.println("Download complete:" + Thread.currentThread().getName());
+    }
+}
+
+public class ThreadDemo {
+    public static void main(String[] args) {
+        var status = new DownloadStatus();
+        var t1 = new Thread(new DownloadFileTask(status));
+        t1.start();
+
+        var t2 = new Thread(() -> {
+            while (!status.isDone()) {
+            }
+            System.out.println(status.getTotalBytes());
+        });
+        t2.start();
+
+    }
+}
+```
+
+在这个案例中，我们会发现程序一直运行不能停止，且`t2`线程无法输出最终结果，主要原因在于：
+
+- 在计算机的`CPU`运行过程中，存在一套缓存机制：为了优化程序执行速度，会首先把主存储器（`main memory`）中的数据拷贝到自己的缓存（`cache`）中，然后再继续运算。由于直接从自己的`cache`中读取数据的速度更快，因此减少了不断传值带来的时间损耗。
+- `t1`线程和`t2`线程首先都把这个值拷贝到自己的缓存中，然后`t1`线程对这个值做出了修改，由于缓存中的数据只有自己可以访问，因此`t2`线程并看不到这个修改，甚至当`t1`线程将这个修改写回到主存储器，这种修改对于`t2`仍然是不可见的。
+
+这种场景，就称为多线程并发的可见性问题：
+
+
+
+![image-20210611030505411](images/image-20210611030505411.png)
+
+- 解决方法：volatile
+
+当`isDone`被`volatile`修饰时，意味着告诉`JVM`这个变量是不稳定的，不要在计算的时候依赖存储在缓存中的值，而总是从主存储器中读取它，同时，当一个线程修改`isDone`时，会立刻更新存储在主存储器中的值。
+
+```java
+public class DownloadStatus {
+    private int totalBytes;
+    private volatile boolean isDone;
+
+    public synchronized void incrementTotalBytes() {
+            totalBytes++;
+    }
+
+    public int getTotalBytes() {
+        return totalBytes;
+    }
+
+    public boolean isDone() {
+        return isDone;
+    }
+
+    public void setDone(boolean done) {
+        isDone = done;
+    }
+}
+```
+
+
+
+### 4.8 CopyOnWriteArrayList
+
+ArrayList由于本身没有进行同步化（synchronize），因此我们可以说它是一个线程不安全的类
+
+Vector线程安全，但是太老了
+
+因此有了CopyOnWriteArrayList
+
+~~~java
+public class Demo {
+
+    public static void main(String[] args) throws InterruptedException {
+
+        // 如果需要统计正确的数量，我们需要编码来实现对被争抢资源的同步化
+        // ArrayList由于本身没有进行同步化，因此我们可以说它是一个线程不安全的类
+        final List<String> list = new CopyOnWriteArrayList<>(); // 这个是一个only one的资源
+   
+        List<Thread> tasks = new ArrayList<>();
+
+        for (int i = 0; i < 2; i++) { // 创建2个独立线程
+
+            Thread t = new Thread(() -> {
+                for (int j = 0; j < 100_000; j++) { // 循环往list中添加元素
+                    list.add("A");
+                }
+            });
+
+            tasks.add(t);
+            t.start();
+        }
+
+        // 等待所有线程都执行完毕
+        for (Thread r : tasks)
+            r.join();
+
+        System.out.println(list.size());
+
+
+    }
+
+}
+~~~
+
+
+
+## 5、面包店问题
+
+- 题目
+
+~~~
+1、请定义一个面包店对象(只有一个实例)
+-- 使用某种固定的频率持续的生产面包
+
+2、请定义一个消费者类(实例有多个)
+-- 去面包店消费(抢)面包，每次消费一个，消费的速度自己定义
+
+3、不断的在控制台输出：
+面包店生产了1个面包，现有XXX个(已经消费了XXX个)
+消费者每消费1个面包，也输出Jack买到了1个面包
+~~~
+
+- 自己写的，不知道合不合理
+
+~~~java
+public class Test {
+    public static void main(String[] args) {
+        Bakery bakery = new Bakery();
+        Thread t = new Thread(bakery);
+        Thread t2 = new Thread(new Consumer(bakery));
+        t.start();
+        t2.start();
+
+    }
+
+    private static class Bakery implements Runnable {
+        int count;
+
+        @Override
+        public void run() {
+            System.out.println("Bakery线程启动");
+            while (true) {
+                //500毫秒抢一次线程
+                try {
+                    Thread.sleep(500);
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
+                }
+
+                synchronized (this) {
+
+                    if (count <100) {
+                        // 面包足够
+
+                        count++;
+                        System.out.println("1生产了一个面包，总共有" + count);
+                        notifyAll();// 生产了面包，告诉消费者可以购买了
+
+                    } else {
+                        // 面包不够
+                        count++;
+                        System.out.println("2生产了一个面包，总共有" + count);
+                        try {
+                            wait();// 生产了面包，告诉消费者可以购买了
+                        } catch (InterruptedException e) {
+                            throw new RuntimeException(e);
+                        }
+
+                    }
+                }
+
+            }
+
+        }
+    }
+
+
+    private static class Consumer implements Runnable {
+        private Bakery bakery;
+
+        @Override
+        public void run() {
+            System.out.println("Consumer线程启动");
+            while (true) {
+                //1200毫秒抢一次线程
+                try {
+                    Thread.sleep(1200);
+
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
+                }
+
+                synchronized (bakery) {
+                    if (bakery.count > 0) {
+                        System.out.println("顾客买了一个面包");
+                        bakery.count--;
+                        bakery.notifyAll();// 消费完了一个面包，相当于减少一个信号量，告诉生产者要生产了
+                    } else {
+                        System.out.println("面包不够");
+                        try {
+                            bakery.wait();  // 面包不够，告诉生产者要生产面包了
+                        } catch (InterruptedException e) {
+                            throw new RuntimeException(e);
+                        }
+
+                    }
+
+                }
+
+            }
+
+        }
+
+        public Consumer(Bakery bakery) {
+            this.bakery = bakery;
+        }
+    }
+
+
+}
+~~~
+
+
 
 
 
